<resources>
    <string name="app_name">EscolaVision</string>


    <string name="question_text_1">01. Ilustrar, dibujar y animar digitalmente.</string>
    <string name="question_text_2">02. Realizar excavaciones para descubrir restos del pasado.</string>
    <string name="question_text_3">03. Seleccionar, capacitar y motivar al personal de una organización/empresa.</string>
    <string name="question_text_4">04. Diseñar programas de computación y explorar nuevas aplicaciones tecnológicas para uso del internet.</string>
    <string name="question_text_5">05. Criar, cuidar y tratar animales domésticos y de campo.</string>
    <string name="question_text_6">06. Pintar, hacer esculturas, ilustrar libros de arte, etcétera.</string>
    <string name="question_text_7">07. Investigar las causas y efectos de los trastornos emocionales.</string>
    <string name="question_text_8">08. Hacer propuestas y formular estrategias para aprovechar las relaciones económicas entre los dos países.</string>
    <string name="question_text_9">09. Concebir planos para viviendas, edificios y ciudadelas.</string>
    <string name="question_text_10">10. Atender la salud de personas enfermas.</string>
    <string name="question_text_11">11. Prepararse para ser modelo profesional.</string>
    <string name="question_text_12">12. Diseñar ropa para niños, jóvenes y adultos.</string>
    <string name="question_text_13">13. Enseñar a niños de 0 a 5 años.</string>
    <string name="question_text_14">14. Administrar una empresa de turismo y/o agencias de viaje.</string>
    <string name="question_text_15">15. Revisar y dar mantenimiento a artefactos eléctricos, electrónicos y computadoras.</string>
    <string name="question_text_16">16. Aplicar métodos alternativos a la medicina tradicional para atender personas con dolencias de diversa índole.</string>
    <string name="question_text_17">17. Ser parte de un grupo de teatro.</string>
    <string name="question_text_18">18. Trabajar en museos y bibliotecas nacionales e internacionales.</string>
    <string name="question_text_19">19. Administrar una empresa (familiar, privada o pública).</string>
    <string name="question_text_20">20. Ejecutar proyectos de extracción minera y metalúrgica.</string>
    <string name="question_text_21">21. Planificar y recomendar dietas para personas diabéticas y/o con sobrepeso.</string>
    <string name="question_text_22">22. Trabajar como presentador de televisión, locutor de radio y televisión, animador de programas culturales y concursos.</string>
    <string name="question_text_23">23. Tocar un instrumento y componer música.</string>
    <string name="question_text_24">24. Organizar, planificar y administrar centros educativos.</string>
    <string name="question_text_25">25. Administrar y ordenar (planificar) adecuadamente la ocupación del espacio físico de ciudades, países etc., utilizando imágenes de satélite, mapas.</string>
    <string name="question_text_26">26. Administrar y renovar menús de comidas en un hotel o restaurante.</string>
    <string name="question_text_27">27. Redactar guiones y libretos para un programa de televisión.</string>
    <string name="question_text_28">28. Gestionar y evaluar convenios internacionales de cooperación para el desarrollo social.</string>
    <string name="question_text_29">29. Aconsejar a las personas sobre planes de ahorro e inversiones.</string>
    <string name="question_text_30">30. Elaborar mapas, planos e imágenes para el estudio y análisis de datos geográficos.</string>
    <string name="question_text_31">31. Atender y realizar ejercicios a personas que tienen limitaciones físicas, problemas de lenguaje, etcétera.</string>
    <string name="question_text_32">32. Cuando realizo algún trabajo o tarea me gusta hacerlo de manera original, de forma diferente a la mayoría de las personas.</string>
    <string name="question_text_33">33. Soy una persona siempre dispuesta a cooperar con los demás y a participar en actividades sociales.</string>
    <string name="question_text_34">34. Soy capaz de explicar las cosas a los demás con claridad y entusiasmo, consiguiendo convencerlos o persuadirlos de mis ideas y puntos de vista.</string>
    <string name="question_text_35">35. Me gusta aceptar sugerencias que me hacen los compañeros de trabajo y cumplir con responsabilidad las instrucciones recibidas de mis superiores.</string>
    <string name="question_text_36">36. Considero que soy una persona práctica, me gusta ocuparme en trabajos útiles en los que pueda ver pronto los resultados.</string>
    <string name="question_text_37">37. Me divierten los juegos que requieren "pensamiento analítico": ajedrez, resolver cuestiones matemáticas, deducir combinaciones, aplicar estrategias, etc …</string>
    <string name="question_text_38">38. Me gusta manipular herramientas o máquinas y ser capaz de aprovechar todas sus posibilidades.</string>
    <string name="question_text_39">39. Rediseñar y decorar espacios fisicos en viviendas, oficinas y locales comerciales.</string>
    <string name="question_text_40">40. Sé controlar mis emociones y mis sentimientos; medito antes de actuar y analizar las consecuencias de mis actos.</string>
    <string name="question_text_41">41. Querría ser independiente, actuar sin tener que hacer caso a las costumbres o normas establecidas por la sociedad.</string>
    <string name="question_text_42">42. Me considero capaz de comprender a las personas tristes o aburridas y procurar despertar en ellas cierto optimismo.</string>
    <string name="question_text_43">43. Normalmente me gustaría ser el líder del grupo donde me encuentro y que los demás reconozcan mis cualidades.</string>
    <string name="question_text_44">44. Procuro tener mis cosas bien ordenadas y realizar los trabajos con pulcritud.</string>
    <string name="question_text_45">45. Prefiero dedicarme a trabajos de tipo manual que a otras preocupaciones que se basen en el uso de las ideas y/o palabras.</string>
    <string name="question_text_46">46. Cuando inicio el conocimiento de un tema nuevo me entusiasma profundizar y no lo dejo hasta que consigo comprenderlo e interpretarlo bien.</string>
    <string name="question_text_47">47. Me gusta dedicarme a trabajos que se puedan hacer en toda libertad, sin condiciones ni imposiciones.</string>
    <string name="question_text_48">48. Una de mis características es ser una persona generosa y servicial para prestar ayuda a los demás para que resuelvan sus problemas o dificultades.</string>
    <string name="question_text_49">49. A menudo consigo que los demás se den cuenta de los aspectos positivos y agradables de las situaciones o de los acontecimientos.</string>
    <string name="question_text_50">50. Creo que soy eficaz y tengo sentido práctico en áreas de organización, sé estar atento y preocuparme de los detalles.</string>
    <string name="question_text_51">51. Me atraen las actividades que impliquen un esfuerzo físico.</string>
    <string name="question_text_52">52. Dedico bastante tiempo a las lecturas de libros y revistas de tipo científico …</string>
    <string name="question_text_53">53. Me considero una persona imaginativa, con inspiración, capaz de encontrar soluciones nuevas a los problemas que se presentan.</string>
    <string name="question_text_54">54. Me gusta meditar sobre la realidad social y me preocupan las injusticias que a veces sufren ciertas personas.</string>
    <string name="question_text_55">55. Tengo ambición, me complacería llegar a altos niveles de responsabilidad, ser una persona importante.</string>
    <string name="question_text_56">56. A menudo planifico lo que tengo que hacer de manera realista, metódica, y detallada. Me gusta tener las cosas previstas y no actuar al azar o improvisando.</string>
    <string name="question_text_57">57. Prefiero las actividades que suponen el contacto con cosas (manipular objetos, utilizar máquinas).</string>
    <string name="question_text_58">58. Sinceramente, estoy mejor cuando puedo trabajar o estudiar solo/a y puedo concentrarme en lo que hago.</string>
    <string name="question_text_59">59. No me gusta la falta de estética en carteles, publicaciones, escaparates.</string>
    <string name="question_text_60">60. Tengo facilidad para iniciar conversaciones con personas que acabo de conocer y me intereso por sus preferencias o aficiones.</string>
    <string name="question_text_61">61. Opino que la economía (comercio, negocios, finanzas, etc.) es uno de los aspectos más importantes para el desarrollo del individuo y de la sociedad.</string>
    <string name="question_text_62">62. Prefiero un mismo tipo de ritmo de trabajo cada día que estar continuamente cambiando.</string>
    <string name="question_text_63">63. Diseñar y ejecutar programas de turismo.</string>


    <string name="button1">Nada de acuerdo/No me gusta en absoluto</string>
    <string name="button2">Un poco de acuerdo/Me atrae un poco</string>
    <string name="button3">Bastante de acuerdo/Me interesa bastante</string>
    <string name="button4">Absolutamente de acuerdo/Me gusta mucho</string>
    <string name="botonNext">Siguiente</string>

    <string name="new_test">New Test</string>

    <string name="area1">Área 1:</string>
    <string name="area2">Área 2:</string>
    <string name="area3">Área 3:</string>
    <string name="area4">Área 4:</string>
    <string name="area5">Área 5:</string>

    <string name="instruccionesTitulo">
        Instrucciones
    </string>
    <string name="instruccionesTexto">
                En la siguiente pantalla aparecerá un test que deberas responder con total sinceridad, para responder deberás presionar la casilla que más se ajuste a tu respuesta sobre la pregunta.
    </string>
</resources>