<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/question_text_1"
        android:textColor="@color/black"
        android:textSize="21sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boton1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:clickable="true"
            android:minWidth="64dp"
            android:minHeight="54dip"
            android:text="@string/button1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <Button
            android:id="@+id/boton2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_dark"
            android:minWidth="64dp"
            android:minHeight="54dip"
            android:text="@string/button2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <Button
            android:id="@+id/boton3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:minWidth="64dp"
            android:minHeight="54dip"
            android:text="@string/button3"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <Button
            android:id="@+id/boton4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_dark"
            android:minWidth="64dp"
            android:minHeight="54dip"
            android:text="@string/button4"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/botonNext"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/verdeAgua"
            android:text="@string/botonNext"
            android:translationY="100px" />
    </LinearLayout>

</LinearLayout>