<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondoInicio">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_icono_oficial_2_round" />

            <TextView
                android:id="@+id/textView61"
                style="@style/recipesTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="40sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView62"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:text="@string/instruccionesTitulo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView63"
            style="@style/recipesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="20dp"
            android:paddingRight="15dp"
            android:paddingBottom="50dp"
            android:text="@string/instruccionesTexto"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/buttonScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:text="EMPEZAR" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>